apply sonarcloud suggestion