@@ -9029,7 +9029,7 @@ public class SystemHandler extends BaseHandler {
      */
 
     public List<Long> changeProxy(User loggedInUser, List<Integer> sids, Integer proxyId) {
-        List<Long> sysids = sids.stream().map(Integer::longValue).collect(Collectors.toList());
+        List<Long> sysids = sids.stream().map(Integer::longValue).toList();
         try {
             return ActionManager.changeProxy(loggedInUser, sysids, proxyId.longValue());
         }
